# vrtio

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
cmake/: VrtigoBuild.cmake  VrtioBuild.cmake  version.hpp.in  vrtigoConfig.cmake.in  vrtioConfig.cmake.in
docs/: design.md  header_view.md  packet_accessors.md  quickstart.md  style.md  trailer_view.md
examples/: CMakeLists.txt  basic_usage.cpp  context_example.cpp  file_parsing_example.cpp  timestamp_example.cpp  trailer_example.cpp  udp_reader_example.cpp
include/: lvrt.hpp  vrtigo.hpp  vrtio.hpp
include/lvrt/: lvrt_io.hpp
include/lvrt/core/: cif.hpp  class_id.hpp  concepts.hpp  endian.hpp  timestamp.hpp  timestamp_traits.hpp  types.hpp
include/lvrt/core/detail/: header_decode.hpp
include/lvrt/io/: vrt_file_reader.hpp
include/lvrt/packet/: builder.hpp  context_packet.hpp  context_packet_view.hpp  signal_packet.hpp
include/vrtigo/: class_id.hpp  field_tags.hpp  timestamp.hpp  types.hpp  vrtigo_io.hpp  vrtigo_utils.hpp
include/vrtigo/detail/: buffer_io.hpp  builder.hpp  cif.hpp  concepts.hpp  context_packet.hpp  data_packet.hpp  endian.hpp  field_access.hpp  field_mask.hpp  field_proxy.hpp  field_traits.hpp  field_values.hpp  header.hpp  header_decode.hpp  header_indicators.hpp  header_init.hpp  packet_concepts.hpp  packet_header_accessor.hpp  packet_parser.hpp  packet_variant.hpp  prologue.hpp  runtime_context_packet.hpp  runtime_data_packet.hpp  timestamp_traits.hpp  trailer.hpp  trailer_view.hpp  variable_field_dispatch.hpp
include/vrtigo/utils/detail/: iteration_helpers.hpp  writer_concepts.hpp  writer_helpers.hpp
include/vrtigo/utils/fileio/: raw_vrt_file_reader.hpp  raw_vrt_file_writer.hpp  vrt_file_reader.hpp  vrt_file_writer.hpp  writer_status.hpp
include/vrtigo/utils/netio/: udp_transport_status.hpp  udp_vrt_reader.hpp  udp_vrt_writer.hpp
include/vrtigo/utils/pcapio/: pcap_common.hpp  pcap_vrt_reader.hpp  pcap_vrt_writer.hpp
include/vrtio/: timestamp.hpp  types.hpp  vrtio_io.hpp  vrtio_utils.hpp
include/vrtio/core/: cif.hpp  class_id.hpp  concepts.hpp  endian.hpp  field_access.hpp  field_proxy.hpp  field_values.hpp  fields.hpp  header.hpp  packet_concepts.hpp  timestamp.hpp  timestamp_traits.hpp  trailer.hpp  trailer_view.hpp  types.hpp
include/vrtio/core/detail/: buffer_io.hpp  field_mask.hpp  field_traits.hpp  header_decode.hpp  header_init.hpp  variable_field_dispatch.hpp
include/vrtio/detail/: builder.hpp  concepts.hpp  context_packet.hpp  context_packet_view.hpp  data_packet.hpp  data_packet_view.hpp  field_access.hpp  field_proxy.hpp  header.hpp  header_indicators.hpp  packet_concepts.hpp  packet_header_accessor.hpp  packet_parser.hpp  packet_variant.hpp  prologue.hpp  runtime_context_packet.hpp  runtime_data_packet.hpp  trailer.hpp  trailer_view.hpp
include/vrtio/io/: vrt_file_reader.hpp
include/vrtio/packet/: builder.hpp  context_packet.hpp  context_packet_view.hpp  data_packet.hpp  data_packet_view.hpp  signal_packet.hpp  signal_packet_view.hpp
include/vrtio/utils/detail/: iteration_helpers.hpp  writer_concepts.hpp  writer_helpers.hpp
include/vrtio/utils/fileio/: packet_variant.hpp  raw_vrt_file_reader.hpp  raw_vrt_file_writer.hpp  vrt_file_reader.hpp  vrt_file_writer.hpp  writer_status.hpp
include/vrtio/utils/fileio/detail/: packet_parser.hpp
include/vrtio/utils/netio/: udp_transport_status.hpp  udp_vrt_reader.hpp  udp_vrt_writer.hpp
scripts/: extract_quickstart.sh
scripts/ci/: README.md  clang-build.sh  clang-tidy.sh  coverage.sh  debug-build.sh  format-check.sh  format-fix.sh  install-verify.sh  quick-check.sh
tests/: CMakeLists.txt  builder_test.cpp  context_basic_test.cpp  context_integration_test.cpp  context_test.cpp  context_test_fixture.hpp  context_timestamp_test.cpp  context_validation_test.cpp  context_variable_test.cpp  endian_test.cpp  field_access_test.cpp  packet_concepts_test.cpp  roundtrip_test.cpp  security_test.cpp  signal_packet_view_test.cpp  timestamp_test.cpp  trailer_test.cpp
tests/cif/: CMakeLists.txt  cif1_test.cpp  cif2_test.cpp  cif3_test.cpp  proxy_test.cpp  value_test.cpp
tests/core/: CMakeLists.txt  header_decode_test.cpp
tests/install_verification/: CMakeLists.txt  minimal_consumer.cpp
tests/io/: CMakeLists.txt  enhanced_reader_test.cpp  file_reader_test.cpp  file_writer_test.cpp  pcap_reader_test.cpp  pcap_test_helpers.hpp  pcap_writer_test.cpp  test_utils.hpp  udp_reader_test.cpp  udp_writer_test.cpp
tests/quickstart/: CMakeLists.txt  context_packet_test.cpp  data_packet_test.cpp  file_reader_test.cpp
